# ignition-tags

./: .gitignore  README.md  ignition_tag_tool_template.xlsx  pyproject.toml  test.xlsx  test2.xlsx
archive/: ignition_tag_tool_excel_format_for_r9.xlsx  ignition_tag_tool_r9.py
docs/: adding-columns.md  test-plan.md
ignition_tags/: __init__.py  cli.py  columns.py  core.py  gui.py
ignition_tags.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
