[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-tags"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "openpyxl",
]

[project.scripts]
ignition-tags = "ignition_tags.cli:main"

[tool.setuptools.packages.find]
include = ["ignition_tags*"]
